--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><!-- 인포그래픽 자기소개 -->아무거나</title>
+    <title>인포그래픽 자기소개</title>
     <link rel="stylesheet" href="css/infographics.css">
 </head>
 <body>
